# mds_build

./: .clang-format  .gitignore  README.md  build.py  cache  mds.py  package.gni
repos/chip/cmsis/: BUILD.gn
repos/chip/gd32vf103/: BUILD.gn
repos/chip/gd32vf103_firmware/: BUILD.gn
repos/chip/stm32f1xx/stm32f1xx_device/: BUILD.gn
repos/chip/stm32f1xx/stm32f1xx_hal_driver/: BUILD.gn
repos/chip/stm32h7xx/stm32h7xx_device/: BUILD.gn
repos/chip/stm32h7xx/stm32h7xx_hal_driver/: BUILD.gn
repos/chip/stm32h7xx_device/: BUILD.gn
repos/chip/stm32h7xx_hal_driver/: BUILD.gn
repos/g/gd32vf103_firmware/: BUILD.gn
repos/g/googletest/: BUILD.gn
repos/m/mds/: BUILD.gn  mds.gni
repos/m/mds/driver/chip/stm32f1xx/: BUILD.gn
repos/m/mds/driver/simulate/: BUILD.gn
repos/mds/: BUILD.gn  mds.gni
repos/mds/component/: BUILD.gn
repos/mds/driver/chip/gd32vf103/: BUILD.gn
repos/mds/driver/chip/stm32f1xx/: BUILD.gn
repos/mds/driver/chip/stm32h7xx/: BUILD.gn
repos/mds/driver/simulate/: BUILD.gn
repos/s/stm32f1xx_hal_driver/: BUILD.gn
repos/s/stm32h7xx_hal_driver/: BUILD.gn
repos/toolchains/: arm_none_eabi_gcc.gni  riscv_none_elf_gcc.gni
repos/utils/segger_systemview/: BUILD.gn
repos/utils/systemview/: BUILD.gn
script/: build.py  package.py
scripts/: build.py  compressor.py  download.py  logparse.py  package.py  run.py  upkgbin.py  which.py
scripts/mds/: __init__.py  build.py  clean.py  compress.py  download.py  logparse.py  package.py  upkgbin.py
toolchains/: arm_none_eabi_gcc.gni  arm_none_eabi_toolchain.gni  gcc.gni  gcc_toolchain.gni  gnu_toolchain.gni  riscv_none_elf_gcc.gni
