declare_args() {
  stm32h7xx_device_define = ""
}

declare_args() {
  stm32h7xx_device_pkg = "chip/stm32h7xx_device"
  stm32h7xx_device_ver = "latest"
  stm32h7xx_device_api =
      "https://api.github.com/repos/STMicroelectronics/cmsis_device_h7/tags"
  stm32h7xx_device_url = "https://github.com/STMicroelectronics/cmsis_device_h7/archive/refs/tags/v{version}.tar.gz"
}

declare_args() {
  if (!defined(stm32h7xx_device_dir)) {
    stm32h7xx_device_ret = exec_script("${mds_script_dir}/package.py",
                                       [
                                         "${stm32h7xx_device_pkg}",
                                         "-u=${stm32h7xx_device_url}",
                                         "-v=${stm32h7xx_device_ver}",
                                         "-a=${stm32h7xx_device_api}",
                                         "-m=name:v(.*)",
                                         "-d=${mds_download_dir}",
                                         "-p=${mds_package_dir}",
                                       ],
                                       "string")
  }
}

declare_args() {
  if (!defined(stm32h7xx_device_dir)) {
    print("package ${stm32h7xx_device_pkg}-${stm32h7xx_device_ret}")
    stm32h7xx_device_dir = "${mds_package_dir}/${stm32h7xx_device_pkg}/${stm32h7xx_device_ret}/cmsis_device_h7-${stm32h7xx_device_ret}"
  }
}

pkggroup("chip/cmsis") {
  configs = [ ":cmsis_core" ]
}

config("stm32h7xx_device_config") {
  include_dirs = [ "${stm32h7xx_device_dir}/Include" ]

  defines = [ "${stm32h7xx_device_define}" ]
}

source_set("stm32h7xx_system") {
  sources = [ "${stm32h7xx_device_dir}/Source/Templates/system_stm32h7xx.c" ]

  public_configs = [ ":stm32h7xx_device_config" ]

  public_deps = [ ":chip/cmsis" ]
}
