# "https://gitee.com/pchom/mds.git"

declare_args() {
  mds_pkgdef = ""
  mds_pkgver = "develop"
}

declare_args() {
  if (mds_pkgdef == "") {
    print(">> package 'mds' @ ${mds_pkgver}")
    mds_pkgdir = exec_script("${mds_script_dir}/package.py",
                             [
                               "mds",
                               "-v=${mds_pkgver}",
                               "-u=https://gitee.com/pchom/mds.git",
                             ],
                             "string")
  } else {
    print("<< package 'mds' in ${mds_pkgdef}")
    mds_pkgdir = mds_pkgdef
  }
}
