import("../mds.gni")

# button
group("button") {
  public_deps = [ "${mds_sys_dir}/component/button/:mds_component_button" ]
}

# fs
group("fs") {
  public_deps = [ "${mds_sys_dir}/component/fs/:mds_component_fs" ]
}

group("fs_emfs") {
  public_deps = [ "${mds_sys_dir}/component/fs/emfs/:mds_component_fs_emfs" ]
}

# lpc
group("lpc") {
  public_deps = [ "${mds_sys_dir}/component/lpc/:mds_component_lpc" ]
}

# utils
group("segger_systemview") {
  public_deps =
      [ "${mds_sys_dir}/component/segger_systemview:mds_component_systemview" ]
}
